# hass-light-sync

./: Cargo.toml  settings.json
src/: main.rs
