[package]
name = "hass-light-sync"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
captrs = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hass-rs = {version = "0.2", features = ["tokio-runtime"] }
url = "2.1"